@@ -107,7 +107,9 @@ public:
     GSkymap&      operator+=(const GSkymap& map);
     GSkymap&      operator-=(const GSkymap& map);
     GSkymap&      operator*=(const GSkymap& map);
+    GSkymap&      operator*=(const double& factor);
     GSkymap&      operator/=(const GSkymap& map);
+    GSkymap&      operator/=(const double& factor);
     double&       operator()(const int& index, const int& map = 0);
     const double& operator()(const int& index, const int& map = 0) const;
     double&       operator()(const GSkyPixel& pixel, const int& map = 0);
