@@ -851,7 +851,7 @@ void TestGSky::test_GSkymap(void)
     map_dst += map_src;
 
     // Check total in destination map. Note that the total in the destination
-    // map should be 100 times the total in the source maps as the operator
+    // map should be 100 times the total in the source map as the operator
     // is expected to perform strict bi-linear interpolation
     double total_dst = 0.0;
     for (int pix = 0; pix < map_dst.npix(); ++pix) {
@@ -860,7 +860,7 @@ void TestGSky::test_GSkymap(void)
         }
     }
     total_dst /= 100.0;
-	test_value(total_dst, total_src, 1.0e-3, "Test operator+");
+	test_value(total_dst, total_src, 1.0e-3, "Test operator+(GSkymap)");
 
     // Subtract pixels from destination map
     map_dst -= map_src;
@@ -873,7 +873,55 @@ void TestGSky::test_GSkymap(void)
             total_dst += map_dst(pix,k);
         }
     }
-	test_value(total_dst, 0.0, 1.0e-3, "Test operator+");
+	test_value(total_dst, 0.0, 1.0e-3, "Test operator-(GSkymap)");
+
+    // Check map multiplication
+    GSkymap test_map  = map_src;
+    test_map         *= map_src;
+    double total_test = 0.0;
+    double total_ref  = 0.0;
+    for (int pix = 0; pix < test_map.npix(); ++pix) {
+        for (int k = 0; k < test_map.nmaps(); ++k) {
+            total_test += test_map(pix,k);
+            total_ref  += map_src(pix,k) * map_src(pix,k);
+        }
+    }
+	test_value(total_test, total_ref, 1.0e-3, "Test operator*(GSkymap)");
+
+    // Check map division
+    test_map   = map_src;
+    test_map  /= map_src;
+    total_test = 0.0;
+    total_ref  = 0.0;
+    for (int pix = 0; pix < test_map.npix(); ++pix) {
+        for (int k = 0; k < test_map.nmaps(); ++k) {
+            total_test += test_map(pix,k);
+            total_ref  += map_src(pix,k) / map_src(pix,k);
+        }
+    }
+	test_value(total_test, total_ref, 1.0e-3, "Test operator/(GSkymap)");
+
+    // Check map scaling
+    test_map   = map_src;
+    test_map  *= 3.3;
+    total_test = 0.0;
+    for (int pix = 0; pix < test_map.npix(); ++pix) {
+        for (int k = 0; k < test_map.nmaps(); ++k) {
+            total_test += test_map(pix,k);
+        }
+    }
+	test_value(total_test, total_src*3.3, 1.0e-3, "Test operator*(double)");
+
+    // Check map division
+    test_map   = map_src;
+    test_map  /= 3.3;
+    total_test = 0.0;
+    for (int pix = 0; pix < test_map.npix(); ++pix) {
+        for (int k = 0; k < test_map.nmaps(); ++k) {
+            total_test += test_map(pix,k);
+        }
+    }
+	test_value(total_test, total_src/3.3, 1.0e-3, "Test operator/(double)");
 
     // Save maps
     map_src.save("test_map_src.fits", true);
