@@ -1,4 +1,4 @@
-2015-02-05  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
+2015-02-08  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
 
         * Version 1.0.0 released
         ========================
@@ -13,6 +13,7 @@
         Add GBilinear class
         Add WCS projections (MOL)
         Add GXmlElement::has_attribute() method
+        Add GSkymap scaling operators (#1296)
 
 
 2015-01-07  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>
